# destroy_ds_stores

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
src/: cache.rs  cli.rs  config.rs  lib.rs  main.rs
