[package]
name = "dds"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.4.3", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
glob = "0.3.1"
rayon = "1.10.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
