[package]
name = "dds"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.4.3", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
glob = "0.3.1"
indicatif = "0.17.8"
rayon = "1.10.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "macros", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
chrono = "0.4"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[[test]]
name = "progressive_cache_tests"
path = "tests/progressive_cache_tests.rs"

[[test]]
name = "integration_progressive_tests"
path = "tests/integration_progressive_tests.rs"

[[test]]
name = "progress_reporting_test"
path = "tests/progress_reporting_test.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
